Working Eclipse configuration